--- a/style.css
+++ b/style.css
@@ -1,9 +1,54 @@
-
 html {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  min-height: 100vh;
+	margin: 0;
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* background: linear-gradient(to right, #283c86, #45a247); */
+}
+
+.calculator {
+	background: white;
+	width: 400px;
+	border-radius: 12px;
+	box-shadow: 0 5px 30px -5px rgba(0, 0, 0, 0.6);
+}
+.calculator-display {
+	background: black;
+	color: white;
+	margin: 0;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	border-radius: 10px 10px 0 0;
+}
+.calculator-display h1 {
+	margin: 0;
+	padding: 25px;
+	font-size: 45px;
+	font-family: "lucida console";
+	overflow-x: auto;
+}
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
