--- a/style.css
+++ b/style.css
@@ -52,3 +52,50 @@ body {
 ::-webkit-scrollbar-thumb:hover {
 	background: #555;
 }
+
+/* buttons */
+.calculator-buttons {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 10px;
+	padding: 10px;
+}
+button {
+	min-height: 50px;
+	font-size: 20px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	background: #d3d0d0;
+	font-weight: 100;
+}
+button:hover {
+	filter: brightness(110%);
+}
+button:active {
+	transform: translateY(1px);
+}
+.operator {
+	background: gray;
+	color: white;
+	font-size: 30px;
+}
+.clear {
+	background: rgb(236, 65, 65);
+	color: white;
+}
+.clear:hover {
+	filter: brightness(90%);
+}
+.equal-sign {
+	grid-column: -2;
+	grid-row: 2 / span 4;
+	background: #5ddb5d;
+}
+
+/* media query */
+@media screen and (max-width: 600px) {
+	.calculator {
+		width: 92%;
+	}
+}
