--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* background: linear-gradient(to right, #283c86, #45a247); */
+	background: linear-gradient(to right, #283c86, #45a247);
 }
 
 .calculator {
